# synthetic-population-schema

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.public.mk  config.yaml  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml  test_pages_build.yaml
BlockGroup/: index.html
Boolean/: index.html
County/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Household/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PUMA/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
School/: index.html
Sparqlpath/: index.html
State/: index.html
String/: index.html
Time/: index.html
Tract/: index.html
Uri/: index.html
Uriorcurie/: index.html
abbreviation/: index.html
about/: index.html
age_in_years/: index.html
agep/: index.html
birth_date/: index.html
block_group_fips_code/: index.html
block_groups/: index.html
counties/: index.html
county_fips_code/: index.html
description/: index.html
entries/: index.html
examples/: README.md
fips_code/: index.html
hh_age/: index.html
hh_id/: index.html
hh_income/: index.html
hh_race/: index.html
households/: index.html
id/: index.html
name/: index.html
persons/: index.html
primary_email/: index.html
project/excel/: synthetic_population_schema.xlsx
pumas/: index.html
rac1p/: index.html
relp/: index.html
school/: index.html
search/: search_index.json
serialno/: index.html
sex/: index.html
size/: index.html
sporder/: index.html
src/docs/: about.md
state_fips_code/: index.html
synthetic-population-schema/: index.html
tests/: __init__.py  test_data.py
tract_fips_code/: index.html
tracts/: index.html
vital_status/: index.html
(+23 files in other folders)
